first react app from learn lab but modified for my own efforts to learn

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
+body, html, #root, #app {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: sans-serif;
+  font-size: 90%;
+  width: 100%;
+  height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#app {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.wrapper {
+  height: 47.5%;
+  width: 100%;
+  max-width: 1024px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 169, 221, 0.507);
+  margin: auto;
+}
+
+
+.color-box {
+  border: 1em solid #444;
+  height: 70%;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+}
+
+#blog-post {
+  text-align: center;
+  background-color: rgba(52, 136, 132, 0.65);
+}
+
+#seperator {
+  width: 100%;
+  height: 5%;
+  background-color:rgba(52, 136, 132, 0.192);
+  max-width: 1024px;
+  margin: auto;
+}
+
+.comment {
+  width: 80%;
+  border: 5px solid rgb(52, 136, 132);
+  text-align: center;
+  background-color: white;
+  padding: 3px;
+  margin: 5px;
+  border-radius: 10px;
 }
