--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+body, html, #root, #app {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  font-size: 90%;
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#app {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.wrapper {
+  height: 47.5%;
+  width: 100%;
+  max-width: 1024px;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: #0ad;
 }
 
-.App-link {
-  color: #61dafb;
+
+.color-box {
+  border: 1em solid #444;
+  height: 90%;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#blog-post {
+  text-align: center;
+  background-color: orange;
+}
+
+#seperator {
+  width: 100%;
+  height: 5%;
+  background-color: grey;
+}
+
+.comment {
+  width: 80%;
+  border: 5px solid purple;
+  text-align: center;
+  background-color: white;
+  padding: 3px;
+  margin: 5px;
+  border-radius: 10px;
 }
